TEST_PROGRAMS/INVALID/chia-wei_liu/invalid1.min
var x: int;var y:float;

x + y;
(x+y) = (x+y+5); # cannot assign to exp
